refactor: register request
